# PyTube-API

./: Dockerfile  README.md  app.py  docker-compose.yml  download_audio_stream.py  download_video_stream.py  exceptions.py  get_preferred_stream.py  get_resolutions.py  get_storage_directory.py  get_streams.py  get_video.py  logging.py  main.py  pyproject.toml  verify_availability.py
backend/: Dockerfile  app.py  download_audio_stream.py  download_video_stream.py  get_preferred_stream.py  get_resolutions.py  get_streams.py  main.py  pyproject.toml  verify_availability.py
backend/app/: app.py  download_audio_stream.py  download_video_stream.py  get_preferred_stream.py  get_resolutions.py  get_streams.py  limiter.py  logging.py  main.py  schema.py  verify_availability.py
backend/app/dependencies/: download_audio_stream.py  download_video_stream.py  get_metadata.py  get_preferred_stream.py  get_resolutions.py  get_streams.py  perform_search.py  verify_availability.py
backend/app/routers/: router.py  video.py
backend/routers/: video.py
backend/test/: conftest.py
ffmpeg_utilities/: stitch_video.py  transcode_video.py
routers/: video.py  videos.py
test/: conftest.py
test/test_get_preferred_stream/: test_get_preferred_stream.py
test/test_get_resolutions/: test_get_resolutions.md  test_get_resolutions.py
test/test_get_streams/: test_get_streams.md  test_get_streams.py
test/test_get_video/: test_get_video.md  test_get_video.py
test/test_verify_availability/: test_verify_availability.md  test_verify_availability.py
(+8 files in other folders)
